[tool.poetry]
name = "api-python"
version = "0.1.0"
description = "First API"
authors = ["Jean Lopes <jean.lopes@grupomfx.com>"]
readme = "README.md"
packages = [{include = "api_python"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
safety = "^2.3.5"
mkdocs-material = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
